--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
     height: 100%;
     background: #edf2fb;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
@@ -19,11 +18,17 @@ body {
 }
 h1 {
     position: absolute;
-    top: 1rem;
+    top: 20px;
     letter-spacing: 2px;
     font-family: 'Lobster', cursive;
     font-size: 64px;
     color: #5386e4;
+    padding: 20px;
+}
+@media (max-width: 550px){
+    h1{
+        font-size: 32px;
+    }
 }
 .slides {
     width: 600px;
